# algoritmos

./: .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  README.md  binary_search.c  bubble_sort.c  flake.nix  justfile  pondering_my_crystal_balls.c
codigo fuente/: pondering_my_crystal_balls.c  queue.c
